# nfc-foo

./: CMakeLists.txt  config.h  configure.ac
cmake/modules/: FindLIBNFC.cmake
src/: CMakeLists.txt  Makefile.am  nfc-cpupwd.c  nfc-mfclassic-ex.c  nfc-mftry2.c
